fixed a spacing issue with the navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ body {
 
 .navbar-light .navbar-nav .nav-link {
     color: white;
-    padding: 30px;
+    padding: 30px 8px;
     font-family: 'Shippori Mincho', serif;
     font-size: 17px;
 }
